# powlib

./: Cargo.toml  README.md
examples/: simple_pow.rs
examples/futures/: Cargo.toml
examples/futures/src/: main.rs
examples/multithreaded/: Cargo.toml
examples/multithreaded/src/: main.rs
src/: gen.rs  hash.rs  lib.rs  num.rs  solver.rs
