[package]
name = "powlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "powlib"

[dependencies]
rand = "0.8.5"
scrypt = "0.11.0"
tokio = { version = "1.26.0", optional = true, features = [ "full" ] }

[features]
tokio_futures = [ "tokio" ]